@@ -346,7 +346,7 @@ sp_ui_edit_menu (GtkMenu *menu, SPDocument *doc)
 	static const unsigned int edit_verbs[] = {
 		SP_VERB_EDIT_UNDO, SP_VERB_EDIT_REDO,
 		SP_VERB_NONE,
-		SP_VERB_EDIT_CUT, SP_VERB_EDIT_COPY, SP_VERB_EDIT_PASTE,
+		SP_VERB_EDIT_CUT, SP_VERB_EDIT_COPY, SP_VERB_EDIT_PASTE, SP_VERB_EDIT_PASTE_STYLE,
 		SP_VERB_NONE,
 		SP_VERB_EDIT_DUPLICATE, SP_VERB_EDIT_DELETE,
 		SP_VERB_NONE,
