@@ -35,6 +35,7 @@ enum {
 	SP_VERB_EDIT_CUT,
 	SP_VERB_EDIT_COPY,
 	SP_VERB_EDIT_PASTE,
+	SP_VERB_EDIT_PASTE_STYLE,
 	SP_VERB_EDIT_DELETE,
 	SP_VERB_EDIT_DUPLICATE,
 	SP_VERB_EDIT_CLEAR_ALL,
